syntax = "proto3";

package protobufs;

option go_package = "/protobufs";

import "message_type.proto";
import "game_message_payload.proto";
// import "chat_message_payload.proto";


// Client to server message
message ClientToServerMessage {
  MessageType message_type = 1;
  oneof payload {
    GameStatePayload game_state_payload = 2;
    GameUpdatePayload game_update_payload = 3;
    // ChatMessagePayload chat_message_payload = 4;
  }
}

